✨ fix footer icon spacing on very small displays

--- a/site/css/footer.scss
+++ b/site/css/footer.scss
@@ -128,6 +128,11 @@
         margin-bottom: 16px;
         flex-wrap: wrap;
         justify-content: space-between;
+
+        h5 {
+            width: 100%;
+            color: $blue-50;
+        }
     }
 
     h5 {
@@ -159,7 +164,8 @@
             }
         }
         @include sm-only {
-            justify-content: space-between;
+            flex-direction: column;
+            gap: 12px;
             li {
                 margin: 0;
                 a {
